Closed
Bug 59033
Opened 24 years ago
Closed 24 years ago
embedding callbacks are called back into during the destruction of the widget
Categories
(Core Graveyard :: Embedding: GTK Widget, defect, P3)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: blizzard, Assigned: blizzard)
Details
Attachments
(2 files)
1.47 KB,
patch
|
Details | Diff | Splinter Review | |
1.47 KB,
patch
|
Details | Diff | Splinter Review |
During the destruction of the embedding widget I've seen the JS status being
called back into and the network status being updated as well. In many cases
this causes crashes since you can be calling back into dead code.
Assignee | ||
Comment 1•24 years ago
|
||
Assignee | ||
Comment 2•24 years ago
|
||
This patch does two things:
o It releases the event listener from the docshell attached to the primary
content shell instead of the chrome shell. This was failing before so the event
listener was dangling.
o It removes the container window from the web browser object. If you don't do
this then code in the docshell will try to send you updates about changes in the
object's status.
Status: NEW → ASSIGNED
Comment 3•24 years ago
|
||
From looking at the patch I think there's some unnecessary code in there (minor
trivial things), the patch does:
docShell = do_QueryInterface(contentItem);
webProgress = do_GetInterface(docShell);
Couldn't this be done simply as:
webProgress = do_GetInterface(contentnItem);
since docShell is not used for anything else after that QI, or did I overlooks
something?
Other than that, the patch looks fine but I can't say I know a lot about the
embedding API's so I can't really tell if the fix is ok or not on the API level...
Assignee | ||
Comment 4•24 years ago
|
||
I didn't think that you can do a GetInterface directly from the original object.
Now that I think about it you probably can.
Assignee | ||
Comment 5•24 years ago
|
||
Assignee | ||
Comment 6•24 years ago
|
||
Updated patch.
Assignee | ||
Comment 7•24 years ago
|
||
I have an r=valeski on this one.
Comment 8•24 years ago
|
||
Cc'ing mscott to review my super-review. This looks ok, although a little dense
(some extra newlines before "code paragraphs", please!). Is there any order
dependency in removing oneself as a tree owner between browser and content tree
items?
/be
Comment 9•24 years ago
|
||
This looks okay to me too. I don't believe there's a problem with the order.
sr=mscott
Assignee | ||
Comment 10•24 years ago
|
||
Checked in. Thanks, guys.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Updated•13 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•