Fix for bug #59033.  Properly detach the content progress listener and the container window to help with some shutdown crashes in the embedding widget.  r=jst,valeski sr=mscott,brendan